<?xml version="1.0"?>
<package>
  <name>pillar_localization</name>
  <version>0.0.0</version>
  <description>The pillar_localization package</description>

  <maintainer email="sebastian.buck@uni-tuebingen.de">buck</maintainer>

  <license>BSD</license>
  <author email="sebastian.buck@uni-tuebingen.de">buck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>csapex</build_depend>
  <build_depend>csapex_point_cloud</build_depend>
  <build_depend>csapex_transform</build_depend>
  <build_depend>csapex_core_plugins</build_depend>
  <build_depend>csapex_ros</build_depend>
  <build_depend>pcl_ros</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>csapex</run_depend>
  <run_depend>csapex_point_cloud</run_depend>
  <run_depend>csapex_transform</run_depend>
  <run_depend>csapex_core_plugins</run_depend>
  <run_depend>csapex_ros</run_depend>
  <run_depend>pcl_ros</run_depend>

  <export>
    <csapex plugin="${prefix}/plugins.xml" />
  </export>
</package>
